--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-reedux",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A slim wrapper allowing the connection of redux in svelte SPAs",
   "main": "src/index.js",
   "repository": "git@github.com:icarus-sullivan/svelte-redux.git",
@@ -9,5 +9,8 @@
   "peerDependencies": {
     "redux": "^4.0.5",
     "svelte": "^3.34.0"
-  }
+  },
+  "files": [
+    "src/*"
+  ]
 }
