--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-reedux",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A slim wrapper allowing the connection of redux in svelte SPAs",
   "main": "src/index.js",
   "repository": "git@github.com:icarus-sullivan/svelte-redux.git",
@@ -12,5 +12,15 @@
   },
   "files": [
     "src/*"
+  ],
+  "keywords": [
+    "redux",
+    "reedux",
+    "svelte",
+    "svelte-redux",
+    "svelte-reedux",
+    "react-redux",
+    "connect",
+    "svelte3"
   ]
 }
